src/objects/Inspection__c.object
<CustomObject>
    <description>Manages Inspection records for license, site, violation and other inspection types</description>
    <fields>
        <fullName>Abandon_Tool_Reason__c</fullName>
        <inlineHelpText>Reason a previously selected tool has been abandoned during the visit. This is filled when the tool is abandoned in visit mode</inlineHelpText>
        <label>Abandon Tool Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Summary__c</fullName>
        <description>Describe the activity summary that will be used in the visit narrative</description>
        <inlineHelpText>Describe the activity summary that will be used in the visit narrative</inlineHelpText>
        <label>Activity Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_EEC_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Additional EEC Licensor or staff that will be present or was present during the visit. This information will appear in Visit Summary</inlineHelpText>
        <label>Additional EEC Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visit_Additional_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>At creation and if left blank, Address 1 will be populated with Provider address after saving.</inlineHelpText>
        <label>Street Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <inlineHelpText>At creation and if left blank, Address 2 will be populated with Provider address after saving</inlineHelpText>
        <label>Street Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Turnaround_Time_for_Visits_Days__c</fullName>
        <formula>IF( 

(ISBLANK(Date_and_Time_of_Published_on_the_Portal__c)  ||  ISBLANK(Date_and_Time_of_Visit_Completion__c)),

NULL,

(Date_and_Time_of_Published_on_the_Portal__c - Date_and_Time_of_Visit_Completion__c)

)</formula>
        <label>Admin Turnaround Time for Visit (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Announced_Visit_Remainder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine if the email was sent or not.</description>
        <label>Announced Visit Remainder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Announced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announcement_Type__c</fullName>
        <inlineHelpText>Type of announcement given to the provider. For announced, the system will automatically email the provider (if email is known) with confirmation and reminders. For semi-announced, the system will create a task for the licensor to announce to the provider</inlineHelpText>
        <label>Announcement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unannounced</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Announced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-announced</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Email__c</fullName>
        <formula>Inspector_del__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Id__c</fullName>
        <formula>Inspector_del__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager__c</fullName>
        <description>Assigned to person manager email address. This is field is used to identify the manager email on the visit object directly (used in some workflow / approval process). It&apos;s not displayed to users and automatically updated by a workflow rule.</description>
        <label>Assigned To Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Me_Or_My_Subordinates__c</fullName>
        <description>Checkbox to indicate if the current user has this visit record in his/her role hierarchy</description>
        <formula>OR(  Assigned_to_Me__c, 
Inspector_del__r.ManagerId = $User.Id,
Inspector_del__r.Manager.ManagerId = $User.Id)</formula>
        <inlineHelpText>Checkbox to indicate if the current user has this visit record in his/her role hierarchy</inlineHelpText>
        <label>Assigned To Me Or My Subordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Phone__c</fullName>
        <formula>Inspector_del__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_User_Is_An_Investigator__c</fullName>
        <formula>CONTAINS(Inspector_del__r.Title, &quot;Investigator&quot;)</formula>
        <label>Assigned To User Is An Investigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <description>This field is used in reports to filter on Visits assigned to &quot;me&quot;</description>
        <formula>$User.Id =  Inspector_del__c</formula>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_be_Edited__c</fullName>
        <formula>!AND(OR(ISPICKVAL(Status__c,&apos;Cancelled&apos;), ISPICKVAL(Status__c,&apos;Closed&apos;)),!ISBLANK($UserRole.Name),$UserRole.Name !=&apos;Executive_and_Directors&apos;,$UserRole.Name!=&apos;Regional_Director&apos;,OR(NOT(OR(CONTAINS($UserRole.DeveloperName,&apos;Director&apos;),CONTAINS($UserRole.DeveloperName,&apos;Supervisor&apos;))),AND($UserRole.DeveloperName==&apos;FCC_Supervisor&apos;, Provider_No__r.RecordType.Name != &apos;Family Child Care&apos;), AND($UserRole.DeveloperName==&apos;SLGSA_Supervisor&apos;,Provider_No__r.RecordType.Name != &apos;Large Group&apos;,Provider_No__r.RecordType.Name != &apos;Small Group&apos;), AND($UserRole.DeveloperName==&apos;R_P_Supervisor&apos;, Provider_No__r.RecordType.Name != &apos;Group Care&apos;,Provider_No__r.RecordType.Name != &apos;Temporary Shelter&apos;,Provider_No__r.RecordType.Name != &apos;Adoption Agency&apos;,Provider_No__r.RecordType.Name != &apos;Foster Care Agency&apos;)))</formula>
        <label>Can be Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation__c</fullName>
        <description>If status is changed to Cancel, then Cancellation reason must be provided.</description>
        <label>Closed / Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <formula>Provider_No__r.Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Qualify_2Upd_To_Schedule_Visit__c</fullName>
        <description>Temp field to check if a qualifying status to update the To Schedule Visit flag exists.....delete after testing</description>
        <formula>OR( ISPICKVAL(Status__c,&quot;Scheduled&quot;),  ISPICKVAL(Status__c, &quot;Visit Completed&quot;),  ISPICKVAL(Status__c, &quot;Pending Approval&quot;))</formula>
        <inlineHelpText>Temp field to check if a qualifying status to update the To Schedule Visit flag exists.....delete after testing</inlineHelpText>
        <label>Check Qualify 2Upd To Schedule Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Record_Type_Name_Value__c</fullName>
        <description>Temp field for testing....delete after testing</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Temp field for testing....delete after testing</inlineHelpText>
        <label>Check Record Type Name Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_if_Licensing_Trans_Lookup_Exists__c</fullName>
        <description>Temp field to check if a Licensing Trans exists.....delete after testing</description>
        <formula>NOT(ISBLANK( Licensing_Transaction__c ))</formula>
        <inlineHelpText>Temp field to check if a Licensing Trans exists.....delete after testing</inlineHelpText>
        <label>Check if Licensing Trans Lookup Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist_Summary_issue_date__c</fullName>
        <inlineHelpText>Date the checklist summary was issued last.</inlineHelpText>
        <label>Tool Summary issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>At creation and if left blank, City will be populated with Provider address after saving</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Cancellation_Date__c</fullName>
        <description>Save the date when the visit was closed or cancelled</description>
        <label>Closed / Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Mention here the additional comments that should be displayed in the visit narrative</description>
        <inlineHelpText>Mention here the additional comments that should be displayed in the visit narrative</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Deadline__c</fullName>
        <description>This field contains the deadline given to the provider to answer to a visit report with corrective actions</description>
        <formula>IF( OR(ISPICKVAL(Status__c, &quot;Closed&quot;),  ISPICKVAL(Status__c, &quot;Cancelled&quot;), ISPICKVAL(Status__c, &quot;Feedback received, to review&quot;), Number_of_non_compliant_items__c=0,  RecordType.Name = &quot;Investigation Visits&quot;),NULL, TODAY() +  Number_of_days_to_receive_response__c)</formula>
        <inlineHelpText>Deadline given to the provider to answer to a visit report with corrective actions</inlineHelpText>
        <label>Corrective Action Reception Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Required__c</fullName>
        <description>Describe the corrective actions that will be added to the visit narrative</description>
        <inlineHelpText>Add here additional comments related to corrective actions that will appear in the visit narrative
This text comes in addition to the standard text that depends of the result of the visit: include non-compliant items or not.</inlineHelpText>
        <label>Corrective Action Required</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Count_Visit_For_Visit_Creation_Batch__c</fullName>
        <description>If checked, it means that this visit counts as a visit that can be taken into account during the automated visit creation batch, which would mean that a new visit would not be created by the system</description>
        <formula>(ISBLANK( Date_of_Visit__c ) &amp;&amp;

CONTAINS(RecordType.Name, &quot;Licensing&quot;) &amp;&amp;

(ISPICKVAL(Type_of_Visit__c , &quot;Monitoring&quot;) || ISPICKVAL(Type_of_Visit__c , &quot;Enhanced Monitoring&quot;) || ISPICKVAL(Type_of_Visit__c , &quot;Provisional License Renewal&quot;) || ISPICKVAL(Type_of_Visit__c , &quot;Progress&quot;) )  &amp;&amp;

NOT(ISPICKVAL(Status__c , &quot;Cancelled&quot;)))

||

(DATEVALUE(CreatedDate) &gt;= TODAY() - 5 &amp;&amp;  Visit_Created_By_Batch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Visit For Visit Creation Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Issue_Date__c</fullName>
        <inlineHelpText>Date the cover letter was issued last.</inlineHelpText>
        <label>Cover Letter Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Narrative__c</fullName>
        <label>Cover Letter Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_on_the_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Note that all licensing visits with the following statuses will be available on portal:  &quot;Scheduled&quot; (if Announced flag is checked)  / &quot;Closed&quot; / &quot;Report Sent to Provider, Awaiting Feedback&quot; / &quot;Feedback received, to review&quot;</description>
        <inlineHelpText>If checked, non compliant items associated to this visit have been published on portal and are ready to be reviewed.</inlineHelpText>
        <label>Published on Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Published_on_the_Portal__c</fullName>
        <description>This field is used with the process flow Visit_Field_Calculations_for_Turnaround_Time to calculate administrative turnaround time for visits</description>
        <label>Date and Time of Published on the Portal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Visit_Completion__c</fullName>
        <description>This field is used with the process flow Visit_Field_Calculations_for_Turnaround_Time to calculate administrative turnaround time</description>
        <label>Date and Time of Visit Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <description>Date of site inspection visit</description>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EEC_Legacy_Compliance_Code_Desc__c</fullName>
        <label>Legacy Compliance Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Main_Recipient__c</fullName>
        <label>Email Alert Main Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Secondary_Recipient__c</fullName>
        <label>Email Alert Secondary Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Template_Switch_Tool_Justification__c</fullName>
        <formula>IF( ISBLANK( Switch_Tool_Justification_2__c ), Switch_Tool_Justification_1__c, Switch_Tool_Justification_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template Switch Tool Justification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Deadline__c</fullName>
        <label>Estimated Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCC_Child_Care_Record_Chart__c</fullName>
        <formula>IF( $Organization.Id = &quot;00D170000000PUw&quot; ,

HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015j00000016wDx&quot;, &quot;Child Care Record Chart (Word)&quot;)

,


HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01511000000XdnZ&quot;, &quot;Child Care Record Chart (Word)&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open Word version of Children’s Records Checklist (which also includes instructions to assist you in completing the required children’s records checklist)</inlineHelpText>
        <label>FCC - Child Care Record Chart (W)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Visit_Tool_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first visit tool that was applied to the Visit</description>
        <inlineHelpText>This is the initial Visit Tool that was applied to the Visit</inlineHelpText>
        <label>First Visit Tool Used</label>
        <referenceTo>Standard_Checklist_Reference__c</referenceTo>
        <relationshipLabel>Visits (First Visit Tool Used)</relationshipLabel>
        <relationshipName>Visits3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSA_Child_Records_Checklist__c</fullName>
        <formula>IF( $Organization.Id = &quot;00D170000000PUw&quot; ,

HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015j00000016wEM&quot;, &quot;Child Records Checklist (Word)&quot;)

,


HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01511000000Xdno&quot;, &quot;Child Records Checklist (Word)&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open Word version of Child Records Checklist (which includes instructions to assist you in completing the required children’s records checklist)</inlineHelpText>
        <label>GSA - Child Records Checklist (W)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Staff_Records_Checklist__c</fullName>
        <formula>IF( $Organization.Id = &quot;00D170000000PUw&quot; ,

HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015j00000016wER&quot;, &quot;Staff Records Checklist (Word)&quot;)

,


HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01511000000Xdny&quot;, &quot;Staff Records Checklist (Word)&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open Word version of Staff Record Checklist (includes instructions to assist you in completing the required staff records checklist)</inlineHelpText>
        <label>GSA - Staff Records Checklist (W)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspector_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Licensor or investigator who performs the inspection</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvestigationId__c</fullName>
        <formula>Investigation__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InvestigationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Investigation may have one or more related Inspections</description>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Upgrade_or_Renewal_Date__c</fullName>
        <formula>Provider_No__r.Last_Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Upgrade or Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_FCC_LM_Mobile_Visit__c</fullName>
        <label>Legacy FCC LM/Mobile Visit</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Interaction__c</fullName>
        <label>Legacy System Interaction #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <formula>Provider_No__r.Renewal_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <formula>Provider_No__r.Current_License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Status_Provider_Status__c</fullName>
        <formula>TEXT( Provider_No__r.License_Status__c ) &amp; &quot; / &quot; &amp;  TEXT( Provider_No__r.Provider_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Status / Provider Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licensing Transaction</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Licensing_Transaction__c.Provider__c</field>
                <operation>equals</operation>
                <valueField>$Source.Provider_No__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mater_Visit_for_Res_Cluster_of_Visits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select here the visit that will serve as Primary Visit. Being defined as a &apos;dependent associated&apos; visit, this visit will follow the same process than the Primary for the following steps: visit scheduling, selection of visit checklist, and report creation.</inlineHelpText>
        <label>Primary Visit (for Cluster of Visit)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Inspector_del__c</field>
                <operation>equals</operation>
                <valueField>Inspection__c.Inspector_del__c</valueField>
            </filterItems>
            <filterItems>
                <field>Inspection__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Licensing</value>
            </filterItems>
            <filterItems>
                <field>Inspection__c.Provider_No__r.Is_Residential__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Inspection__c.Mater_Visit_for_Res_Cluster_of_Visits__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Inspection__c.Provider_No__r.Umbrella_Members__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Dependent Associated Visits (for Res. Cluster of Visits)</relationshipLabel>
        <relationshipName>Slave_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Assessed_Date__c</fullName>
        <label>Max Assessed Date</label>
        <summarizedField>Inspection_Item__c.Assessed_Date__c</summarizedField>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Assessed_Date__c</fullName>
        <label>Min Assessed Date</label>
        <summarizedField>Inspection_Item__c.Assessed_Date__c</summarizedField>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Birth_Mothers_Making_Adoption_Plan__c</fullName>
        <inlineHelpText>Number of Birth Mothers Who Made an Adoption Plan for Adoption Agencies</inlineHelpText>
        <label>No. Birth Mothers Making Adoption Plan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Birth_Mothers_Receiving_Services__c</fullName>
        <inlineHelpText>Number of Birth Mothers Who Received Services for Adoption Agencies</inlineHelpText>
        <label>No. Birth Mothers Receiving Services</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Families_Rec_Home_Stdy_Serv_Only__c</fullName>
        <inlineHelpText>Number of Families Receiving Home Study Service Only for Adoption Agencies</inlineHelpText>
        <label>No. Families Rec Home Stdy Serv Only</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Families_Receiving_Info_and_Referral__c</fullName>
        <inlineHelpText>Number of Families Receiving Information and Referral for Adoption Agencies</inlineHelpText>
        <label>No. Families Receiving Info and Referral</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Indiv_Rec_Search_and_or_Reunion_Serv__c</fullName>
        <inlineHelpText>Number of Individuals Receiving Search and/or Reunion Services for Adoption Agencies</inlineHelpText>
        <label>No. Indiv Rec Search and/or Reunion Serv</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Families_Rec_Case_Mgmt_Services__c</fullName>
        <inlineHelpText>Number of Families Receiving Case Management Services for Adoption Agencies</inlineHelpText>
        <label>No. of Families Rec Case Mgmt Services</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_to_User__c</fullName>
        <formula>&quot;Legacy Visit, please be aware that some Visit Items might appear to be duplicates.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Note to User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfChildrenPlacedInCare__c</fullName>
        <label>Number of Children Placed in Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Adoptive_Placements__c</fullName>
        <inlineHelpText>Number of Adoptive Placements for Adoption Agencies</inlineHelpText>
        <label>No. Adoptive Placements</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Child_Assessments__c</fullName>
        <inlineHelpText>Number of Child Assessments for Adoption Agencies</inlineHelpText>
        <label>Number of Child Assessments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Foster_Homes__c</fullName>
        <inlineHelpText>Number of Foster Homes for Adoption Agencies</inlineHelpText>
        <label>Number of Foster Homes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Home_Study_Services__c</fullName>
        <inlineHelpText>Number of Home Study Services for Adoption Agencies</inlineHelpText>
        <label>Number of Home Study Services</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Items_Abandoned__c</fullName>
        <label>Number of Items Abandoned</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Non Assessed (tool abandoned)</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Items_with_Corrective_Actions__c</fullName>
        <label>Number of Items with Corrective Actions</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Non-Compliant</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection_Item__c.Date_Implemented__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Compliant_items_Accepted__c</fullName>
        <label>Number of Non-Compliant items Accepted</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Correction_Plan_Status__c</field>
            <operation>equals</operation>
            <value>EEC Accepted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Non-Compliant</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Not_Assessed_Items__c</fullName>
        <label>Number of Not Assessed Items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Not Assessed</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reunions_Facilitated__c</fullName>
        <inlineHelpText>Number of Reunions Facilitated for Adoption Agencies</inlineHelpText>
        <label>Number of Reunions Facilitated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Waiting_Families__c</fullName>
        <inlineHelpText>Number of Waiting Families for Adoption Agencies</inlineHelpText>
        <label>Number of Waiting Families</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_compliant_items__c</fullName>
        <description>Provide the number of inspection items that are compliant</description>
        <label>Number of Compliant Items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Compliant</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_days_to_receive_response__c</fullName>
        <description>Number of days to receive response</description>
        <inlineHelpText>Number of days given to the provider to receive corrective actions plan.</inlineHelpText>
        <label>Number of Days to Receive Corr. Actions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_items_to_assess__c</fullName>
        <description>Provide the number of items that has not been reviewed yet</description>
        <label>Number of Items to Assess</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection_Item__c.Non_Assessed_Item__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_applicable_items__c</fullName>
        <description>Provide the number of non applicable inspection items</description>
        <label>Number of Non-Applicable items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Not Applicable</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_assessed_items__c</fullName>
        <description>Provide the number of non-assessed items from a visit</description>
        <label>Number of Non-Assessed items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Non_Assessed_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>